<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#EFEFEF"
        android:gravity="bottom|end"
        android:padding="10dp"
        android:text="@string/calc_text"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/light_brown"
            android:text="@string/_clear"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_negative"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/light_brown"
            android:text="+/-"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_percent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/light_brown"
            android:text="%"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/sky"
            android:text="@string/_divide"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/_7"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/_8"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/_9"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/sky"
            android:text="@string/_multiply"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/_4"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/_5"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/_6"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/sky"
            android:text="@string/_minus"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/_1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/_2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/_3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/sky"
            android:text="@string/_plus"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:backgroundTint="@color/gray"
            android:text="@string/_0"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/_dot"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/sky"
            android:text="@string/_equal"
            android:textSize="20sp" />
    </LinearLayout>



</LinearLayout>